[UPD] Set header styles

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,7 @@
     list-style-type: none;
     padding: 0;
     margin: 0;
+    color: var(--black);
 }
 
 html {
@@ -20,5 +21,25 @@ body {
     font-size: 1.6rem;
 }
 header {
+    padding: 17px 82px 17px 29px;
     display: flex;
+    justify-content: space-between;
+}
+
+header nav ul {
+    display: flex;
+    gap: 2;
+    line-height: 20px;
+}
+
+header nav ul li {
+    margin-left: 16px;
+}
+
+header nav ul li a {
+    text-decoration: none;
+    font-size: 1.8rem;
+}
+header nav ul li a:hover {
+    text-decoration: underline;
 }
