--- a/css/styles.css
+++ b/css/styles.css
@@ -84,6 +84,10 @@ section h3 {
 .gallery figure img {
     width: 100%;
 }
+.main__creations .content {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
 .social-media {
     display: flex;
 }
